--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "psr/log": "^3.0",
+        "psr/log": "^1.0 || ^2.0",
         "ext-curl": "*",
         "cboden/ratchet": "^0.4",
         "monolog/monolog": "^1.26"
